 * Display transfer speed in bits per second.
 * Fix message grouping for out-of-order messages.
 * Add new icon set.
 * Make it possible to download files using double click.
 * Respect peer/folder/file orders when updating shares view.
 * Update share entries when new versions are received.
 * Don't bring chat windows to front upon right click on tray icon.

wiLink 0.9.4 (2010-05-18)
 * Hide diagnostics from roster when it is closed.
 * Fix spacing of photo previews on Windows.
 * Make it possible to talk "at" somebody in a chat room.
 * Reflect the availability of chat room members in their icon.
 * Add system tray notifications on Windows and Linux.
 * Restore "Quit" from system tray icon.
 * Fix crash when connecting to Facebook XMPP server.

wiLink 0.9.0 (2010-05-12)
 * Merge photo uploads and diagnostics into the main window.
 * Add a menu to the chat window instead of the system tray icon.
 * Make it possible to access Picasa photo albums.
 * Fix "Send a file" dialog disappearing when a message is received.
 * Notify user when a message is received in a private chatroom.
 * Make it possible to copy only part of a message.
 * Make it possible to invite contacts to a chat room using drag & drop.
 * Make it possible to send a file to a contact using drag & drop.
 * Make it possible to delete photos.
 * Fix handling of large file sizes in shares.
 * Show notifications for messages which arrived while offline.

wiLink 0.8.0 (2010-05-03)
 * Rename wDesktop to wiLink.
 * Improve file transfer support.
 * Add file sharing application.
 * Change the default download directory to "Downloads" on Windows.
 * Move wallet to application data directory.
 * Add a link from roster to a user's web page.
 * Make it possible to rename chat contacts.
 * Treat Enter and Return keys the same way in chat input.
 * Make it possible to change users by removing main chat account.
 * Make "copy" available using right-click in chat history.